fix(newui): username before avatar, fix header vertical alignment

--- a/theme.css
+++ b/theme.css
@@ -14,6 +14,8 @@ header {
 
 header h1 {
   font-size: 1.3rem;
+  display: flex;
+  align-items: center;
 }
 
 header h1 a:hover {
